samples/_failures_safe/1761334599_cb36a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbe8853d.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_fbe8853d.c:130:72: error: expected ‘)’ at end of input
  130 |                     printf("%s %s %s\n", entry->timestamp, entry->level
      |                           ~                                            ^
      |                                                                        )
./samples/SAFE/__tmp_fbe8853d.c:130:21: error: expected declaration or statement at end of input
  130 |                     printf("%s %s %s\n", entry->timestamp, entry->level
      |                     ^~~~~~
./samples/SAFE/__tmp_fbe8853d.c:130:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbe8853d.c:130:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbe8853d.c:130:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbe8853d.c:130:21: error: expected declaration or statement at end of input
